--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,7 @@
 @import "./partials/variables/variables";
 @import "./partials/pages/home";
+@import "./partials/pages/productDetail";
+@import "./partials/pages/whoweare";
 
 *{
     font-family: $primary-font;
