--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,7 @@
 @import "./partials/pages/home";
 @import "./partials/pages/productDetail";
 @import "./partials/pages/whoweare";
+@import "./partials/pages/signin";
 
 *{
     font-family: $primary-font;
