--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,7 @@
 @import "./partials/pages/productDetail";
 @import "./partials/pages/whoweare";
 @import "./partials/pages/signin";
+@import "./partials/pages/basket";
 
 *{
     font-family: $primary-font;
