--- a/assets/css/partials/pages/_basket.scss
+++ b/assets/css/partials/pages/_basket.scss
@@ -1,3 +1,8 @@
+@media only screen and (max-width: 992px) {
+    .text-start {
+        text-align: center !important;
+    }
+}
 .basket-box {
     background-color: white;
     padding: 20px;
