--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@
 @import "./partials/pages/whoweare";
 @import "./partials/pages/signin";
 @import "./partials/pages/basket";
+@import "./partials/pages/search";
 
 *{
     font-family: $primary-font;
