--- a/assets/css/partials/pages/_home.scss
+++ b/assets/css/partials/pages/_home.scss
@@ -4,7 +4,9 @@ input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
     -webkit-appearance: none;
 }
-
+#toast-container > .toast {
+    width: 285px !important;
+  }
 @media only screen and (max-width: 355px) {
     .arrivals-img {
         height: 300px !important;
