categories page finished

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "./partials/pages/whoweare";
 @import "./partials/pages/signin";
 @import "./partials/pages/basket";
-@import "./partials/pages/search";
+@import "./partials/pages/categories";
 
 *{
     font-family: $primary-font;
