--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1483,6 +1483,12 @@ p {
   background-color: #948AD3;
 }
 
+@media only screen and (max-width: 734px) {
+  .bestsellers-box .title-box {
+    padding: 20px 25px !important;
+  }
+}
+
 .bestsellers-box {
   background: -webkit-gradient(linear, left top, right top, color-stop(0, #8ed4e8), to(#8f7be8));
   background: linear-gradient(to right, #8ed4e8 0, #8f7be8 100%);
@@ -1503,6 +1509,197 @@ p {
   font-size: 16px;
   color: #fff;
   font-weight: bold;
+}
+
+#categories-main .accordion-body {
+  padding: 0 10px;
+}
+
+#categories-main .categories-main-box {
+  background-color: #f2f7ff;
+  padding: 15px;
+}
+
+#categories-main .accordion-item {
+  background-color: transparent;
+  border: none;
+}
+
+#categories-main .accordion-button {
+  background-color: transparent;
+}
+
+#categories-main .accordion-button:focus {
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#categories-main .accordion-button:not(.collapsed) {
+  color: black;
+  background-color: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#categories-main .categories-main-box .list-group-item {
+  background-color: transparent;
+  border: none;
+}
+
+#categories-main .categories-main-box .list-group-item a {
+  color: black;
+}
+
+#categories-main .categories-main-box .list-group-item a:hover {
+  color: #757575;
+}
+
+#categories-main .dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+#categories-main .dropdown .dropdown-toggle {
+  width: 170px;
+  background: transparent;
+  color: black;
+  border: none;
+  border-top: 1px solid black;
+  border-radius: 0px;
+  border-bottom: 1px solid black;
+}
+
+#categories-main .dropdown .dropdown-toggle:hover {
+  color: black;
+  border-color: black;
+  background-color: transparent;
+}
+
+#categories-main .dropdown .dropdown-toggle:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: black;
+  border-color: black;
+  background-color: transparent;
+}
+
+#categories-main .dropdown .dropdown-menu {
+  background-color: #f6ecf3;
+  border-radius: 0;
+  border: none;
+}
+
+#categories-main .arrivals-img {
+  height: 290px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#categories-main .arrivals-img span {
+  padding: 3px 8px;
+  background-color: #F5EA77;
+  color: #333;
+}
+
+#categories-main .img-1 {
+  background-image: url("../img/Skin_Mergency_Treatment_Set_Carton_Front__58833.jpg");
+}
+
+#categories-main .img-1:hover {
+  background-image: url("../img/Skin_Mergency_Lactic_Acid_PINK_SWATCH_A__21458.jpg");
+}
+
+#categories-main .img-2 {
+  background-image: url("../img/KP_Skin_Smoothing_Body_Butter__13368.jpg");
+}
+
+#categories-main .img-2:hover {
+  background-image: url("../img/KP_Skin_Smoothing_Body_Butter_Swatch_A__26980.webp");
+}
+
+#categories-main .img-3 {
+  background-image: url("../img/Mighty_Biome_Moisturizer_Concentrate_Front__50376.webp");
+}
+
+#categories-main .img-3:hover {
+  background-image: url("../img/Mighty_Biome_Moisturizer_Concentrate_Swatch_A__27977.webp");
+}
+
+#categories-main .img-4 {
+  background-image: url("../img/Mighty_Biome_Toner_Front__30153.webp");
+}
+
+#categories-main .img-4:hover {
+  background-image: url("../img/Mighty_Biome_Toner_Swatch_A__13604.webp");
+}
+
+#categories-main .card-body {
+  text-align: center;
+  height: 190px;
+  padding: 0 0 15px 0;
+  position: relative;
+}
+
+#categories-main .card-body .card-title {
+  font-size: 16px;
+  line-height: 17px;
+  font-weight: 600;
+  color: #333;
+}
+
+#categories-main .card-body .card-text {
+  font-size: 13px;
+  line-height: 15px;
+  margin-top: 8px;
+}
+
+#categories-main .card-body .arrival-btn {
+  position: absolute;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  bottom: 20px;
+  height: 40px;
+  width: 180px;
+  border: none;
+  border-radius: 0;
+  cursor: pointer;
+  background-color: #8CD0E3;
+  -webkit-box-shadow: 3px 3px 0 #f5ea77;
+          box-shadow: 3px 3px 0 #f5ea77;
+}
+
+#categories-main .card-body .arrival-btn:hover {
+  -webkit-box-shadow: 3px 3px 0 #fdb1be;
+          box-shadow: 3px 3px 0 #fdb1be;
+  background-color: #948AD3;
+}
+
+#categories-main .pages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#categories-main .pages .current {
+  border: 1px solid gray;
+  color: black !important;
+}
+
+#categories-main .pages .page {
+  font-size: 1em;
+  padding: 5px 12px;
+  color: gray;
 }
 
 * {
