recycling and faq pages added

--- a/assets/css/partials/pages/_categories.scss
+++ b/assets/css/partials/pages/_categories.scss
@@ -171,6 +171,9 @@
         }
     }
     .pages {
+        span {
+            cursor: pointer;
+        }
         display: flex;
         justify-content: center;
         align-items: center;
