--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,8 @@
 @import "./partials/pages/signin";
 @import "./partials/pages/basket";
 @import "./partials/pages/categories";
+@import "./partials/pages/faq";
+@import "./partials/pages/recycling";
 
 *{
     font-family: $primary-font;
